--- a/trivy/Dockerfile
+++ b/trivy/Dockerfile
@@ -17,5 +17,5 @@ RUN apk add --update docker openrc && rc-update add docker boot
 # Create directories
 RUN mkdir -p /root/.docker scripts
 
-# Copy script to directory
-COPY trivy-script.sh /scripts/
+# Change directory
+WORKDIR /scripts
